[FIX] hr: fix employee image in the mobile view.
Steps to Reproduce:
• Install the Employee app.
• Switch to mobile view.
• Open the Employee app; employee images are not visible.

Cause:
CSS was not defined for screen sizes smaller than medium.

Fix:
Added CSS rules for screens smaller than medium to ensure employee images are
displayed correctly in mobile view.

task-4380126

closes odoo/odoo#193887

X-original-commit: 2ad9ad9afc71f8010ea8e1a8b293e3c9ad6993b7

--- a/addons/hr/static/src/components/background_image/background_image.scss
+++ b/addons/hr/static/src/components/background_image/background_image.scss
@@ -1,6 +1,13 @@
 div.o_field_widget.o_field_background_image {
     display: inline-block;
 
+    @include media-breakpoint-down(md) {
+        height: calc(100% + var(--KanbanRecord-padding-v)* 2);
+        margin-top: calc(var(--KanbanRecord-padding-v)* -1);
+        margin-bottom: calc(var(--KanbanRecord-padding-v)* -1);
+        margin-left: calc(var(--KanbanRecord-padding-h)* -1);
+    }
+
     > img {
         display: block;
         width: 100%;
